...
    
    func configTableView() {
        self.tableView.separatorStyle = .none
        self.tableView.showsVerticalScrollIndicator = false
        self.tableView.register(ListCurrenciesTableCell.self,
                                        forCellReuseIdentifier: ListCurrenciesTableCell.id)
        self.tableView.accessibilityIdentifier = "CurrencySelectionTableView"
    }
}

// MARK: - Make Constraints
private extension CurrencySelectionView {
    
...
