...
        self.currencyImageView.clipsToBounds = true
        self.currencyImageView.layer.borderWidth = 1
        self.currencyImageView.layer.borderColor = UIColor.darkGray.cgColor
        self.currencyImageView.contentMode = .scaleAspectFill
        self.currencyImageView.isUserInteractionEnabled = true
        self.currencyImageView.layer.cornerRadius = (self.bounds.height/1.7)/2
        self.currencyImageView.accessibilityIdentifier = "Image"
    }
}

// MARK: - Make Constraints
private extension CurrencyConverterTableCell {
    
...
