...
    
    func configCollectionView() {
        self.collectionView.backgroundColor = .clear
        self.collectionView.showsHorizontalScrollIndicator = false
        self.collectionView.register(ListCurrenciesCollectionCell.self,
                                     forCellWithReuseIdentifier: ListCurrenciesCollectionCell.id)
        self.collectionView.accessibilityIdentifier = "ListCurrenciesCollectionView"
    }
    
    func configTableView() {
        self.tableView.backgroundColor = .clear
        self.tableView.separatorStyle = .none
        self.tableView.showsVerticalScrollIndicator = false
        self.tableView.register(ListCurrenciesTableCell.self,
                                forCellReuseIdentifier: ListCurrenciesTableCell.id)
        self.tableView.accessibilityIdentifier = "ListCurrenciesTableView"
    }
}

// MARK: - Make Constraints
private extension ListCurrenciesView {
    
...
