//
//  TypeCurrencies.swift
//  CurrencyConverter
//
//  Created by pavel mishanin on 07.09.2022.
//

import Foundation

enum TypeCurrencies: String, CaseIterable {
    case list = "List"
    case favorite = "Favorite"
}
